# pandas-column-linter

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CLAUDE.md  DEVELOPING.md  README.md  claude_output.txt  issue.md  issue_original.md  mkdocs.yml  pandas_linter_mypy.py  pyproject.toml  tasks.py
.github/: copilot-instructions.md
.github/workflows/: publish.yml
benchmarks/: benchmark_checkers.py
docs/: .gitignore  index.md  method-matrix.md  usage.md
docs/api/: cli.md  core.md  exceptions.md  index.md  pandas.md  pandera.md  polars.md  schema_algebra.md
examples/: README.md  inference_example.py  pandandic_example.py  pandasframe_example.py  pandera_example.py  polarsframe_example.py  pyproject.toml  schema_algebra_example.py  typeddict_example.py  typedframes_example.py
examples/multi_file_inference/: loaders.py  pipeline.py  pyproject.toml  transforms.py
examples/multi_file_with_schema/: loaders.py  pipeline.py  schemas.py
rust/: Cargo.toml  README.md
rust/benches/: parser_bench.rs
rust/src/: lib.rs  main.rs
rust/tests/: integration_test.rs
rust_pandas_linter/: Cargo.toml
rust_pandas_linter/src/: lib.rs  main.rs
rust_pandas_linter/tests/: integration_test.rs
src/typedframes/: __init__.py  base_schema.py  cli.py  column.py  column_group.py  column_set.py  defined_later.py  mypy.py  pandas.py  pandas_frame.py  pandera.py  polars.py  schema_algebra.py
tests/: test_base_schema.py  test_column.py  test_column_set.py  test_integration.py  test_pandas_frame.py  test_plugin_unit.py  test_regression.py
tests/fixtures/: polarsframe_generic.py
tests/integration/: test_integration.py  test_regression.py
tests/unit/: test_base_schema.py  test_cli.py  test_column.py  test_column_group.py  test_column_set.py  test_combine_schemas.py  test_mypy_plugin.py  test_mypy_utils.py  test_pandas_frame.py  test_pandera.py  test_polars_frame.py
typedframes-checker/: pyproject.toml
typedframes-checker/rust_typedframes_checker/: Cargo.toml
typedframes-checker/rust_typedframes_checker/src/: lib.rs
typedframes-checker/rust_typedframes_checker/tests/: integration_test.rs
typedframes-checker/src/typedframes_checker/: __init__.py  mypy.py
typedframes-lint/src/typedframes_lint/: __init__.py
